--- a/ReaperBalance.csproj
+++ b/ReaperBalance.csproj
@@ -20,7 +20,7 @@
         <!--These properties will control the generated PluginInfo. Version is also used by various parts of the build system.-->
         <BepInExPluginGuid>ReaperBalance</BepInExPluginGuid>
         <BepInExPluginName>ReaperBalance</BepInExPluginName>
-        <Version>0.1.0</Version>
+        <Version>0.2.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
@@ -29,6 +29,7 @@
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
         <PackageReference Include="Silksong.GameLibs" Version="1.0.2-silksong1.0.28561" />
         <PackageReference Include="UnityEngine.Modules" Version="6000.0.50" IncludeAssets="compile" />
+        <PackageReference Include="Silksong.ModMenu" Version="0.2.0" />
     </ItemGroup>
 
     <ItemGroup>
