--- a/ReaperBalance.csproj
+++ b/ReaperBalance.csproj
@@ -29,7 +29,7 @@
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
         <PackageReference Include="Silksong.GameLibs" Version="1.0.2-silksong1.0.28561" />
         <PackageReference Include="UnityEngine.Modules" Version="6000.0.50" IncludeAssets="compile" />
-        <PackageReference Include="Silksong.ModMenu" Version="0.2.0" />
+        <PackageReference Include="Silksong.ModMenu" Version="0.*" />
     </ItemGroup>
 
     <ItemGroup>
